// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test generateScript generateScript should work 1`] = `
"<script>
import { ref } from 'vue';
const visible = ref(false);
function setVisible(v) {
  visible.value = v;
}
</script>"
`;

exports[`test generateScript generateScript should work with script attrs 1`] = `
"<script lang="ts" setup>
import { ref } from 'vue';
const visible = ref(false);
function setVisible(v) {
  visible.value = v;
}
</script>"
`;
